@@ -1,5 +1,5 @@
 /**
- * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2019
+ * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2021
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 package it.infn.mw.iam.authn.util;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.mitre.oauth2.model.SavedUserAuthentication;
@@ -24,16 +25,14 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 
-import com.google.common.collect.ImmutableSet;
-
 import it.infn.mw.iam.authn.oidc.OidcExternalAuthenticationToken;
 import it.infn.mw.iam.authn.saml.SamlExternalAuthenticationToken;
 import it.infn.mw.iam.persistence.model.IamAccount;
 
 public class AuthenticationUtils {
 
-  private static final ImmutableSet<String> SUPPORTED_EXTERNAL_AUTHN_TOKENS =
-      ImmutableSet.of(SamlExternalAuthenticationToken.class.getName(),
+  private static final Set<String> SUPPORTED_EXTERNAL_AUTHN_TOKENS =
+      Set.of(SamlExternalAuthenticationToken.class.getName(),
           OidcExternalAuthenticationToken.class.getName());
 
   private AuthenticationUtils() {}
